@@ -15,7 +15,7 @@ import com.oracle.truffle.api.nodes.Node;
 import java.io.File;
 import java.io.IOException;
 import java.net.URISyntaxException;
-import java.util.ArrayList;
+import java.util.Set;
 import java.util.function.BiConsumer;
 import java.util.function.Function;
 import org.enso.jvm.channel.Channel;
@@ -23,6 +23,7 @@ import org.enso.jvm.channel.JVM;
 import org.enso.jvm.interop.impl.OtherJvmMessage;
 import org.enso.jvm.interop.impl.OtherJvmPool;
 import org.enso.jvm.interop.impl.OtherJvmResult;
+import org.enso.jvm.interop.impl.OtherJvmUtils;
 import org.graalvm.polyglot.Context;
 import org.graalvm.polyglot.HostAccess;
 import org.graalvm.polyglot.Value;
@@ -61,6 +62,7 @@ public final class OtherJvmClassLoader implements TruffleObject, AutoCloseable {
    * @param otherJvm normally we run in AOT mode but for debugging purposes we can also emulate the
    *     connection in a single JVM - pass in value of TruffleOptions.AOT or equivalent
    * @param ctx own context to execute code in
+   * @param onlyWithModules only enable given module names (can be {@code null})
    * @return new instance of the class loader
    * @throws IOException
    * @throws URISyntaxException
@@ -70,9 +72,10 @@ public final class OtherJvmClassLoader implements TruffleObject, AutoCloseable {
       Class<? extends TruffleLanguage> language,
       Function<String, Object> polyglotBindings,
       boolean otherJvm,
-      TruffleContext ctx)
+      TruffleContext ctx,
+      Set<String> onlyWithModules)
       throws IOException, URISyntaxException {
-    var jvm = otherJvm ? initializeJvm(mainModule) : null;
+    var jvm = otherJvm ? initializeJvm(mainModule, onlyWithModules) : null;
     return createImpl(jvm, polyglotBindings, ctx, language);
   }
 
@@ -201,51 +204,29 @@ public final class OtherJvmClassLoader implements TruffleObject, AutoCloseable {
     return result.value(null);
   }
 
-  private static JVM initializeJvm(String mainModule) throws IOException, URISyntaxException {
-    var loc = OtherJvmClassLoader.class.getProtectionDomain().getCodeSource().getLocation();
-    var component = new File(loc.toURI().resolve("..")).getAbsoluteFile();
-    if (!component.getName().equals("component")) {
-      component = new File(component, "component");
-    }
-    var libFile = findDynamicLibrary(component, mainModule);
+  private static JVM initializeJvm(String mainModule, Set<String> moduleNamesOrNull)
+      throws IOException, URISyntaxException {
+    var libFile = findDynamicLibrary(mainModule);
     if (libFile.exists()) {
       return JVM.create(libFile);
     } else {
-      return initializeHotSpotJVM(component, mainModule);
+      return initializeHotSpotJVM(mainModule, moduleNamesOrNull);
     }
   }
 
-  private static JVM initializeHotSpotJVM(File component, String mainModule)
+  private static JVM initializeHotSpotJVM(String mainModule, Set<String> moduleNamesOrNull)
       throws IOException, URISyntaxException {
     var home = System.getProperty("java.home");
     if (home == null) {
       throw new IOException("No java.home specified");
     }
     var javaHome = new File(home);
-    if (!javaHome.exists()) {
-      throw new IOException("JVM doesn't exists: " + javaHome);
-    }
-    var commandAndArgs = new ArrayList<String>();
-    var assertsOn = false;
-    assert assertsOn = true;
-    if (assertsOn) {
-      commandAndArgs.add("-ea");
-    }
-    commandAndArgs.add("--sun-misc-unsafe-memory-access=allow");
-    commandAndArgs.add("-Dpolyglot.engine.WarnInterpreterOnly=false");
-    commandAndArgs.add("-Dtruffle.UseFallbackRuntime=true");
-    commandAndArgs.add("--enable-native-access=org.graalvm.truffle");
-    commandAndArgs.add("--enable-native-access=org.enso.jvm.channel");
-    commandAndArgs.add("--add-opens=java.base/java.nio=ALL-UNNAMED");
-    if (!component.isDirectory()) {
-      throw new IOException("Cannot find " + component + " directory");
-    }
-    commandAndArgs.add("--module-path=" + component.getPath());
-    commandAndArgs.add("-Djdk.module.main=" + mainModule);
-    return JVM.create(javaHome, commandAndArgs.toArray(new String[0]));
+    var args = OtherJvmUtils.findJvmArgs(javaHome, mainModule, moduleNamesOrNull);
+    return JVM.create(javaHome, args);
   }
 
-  private static File findDynamicLibrary(File dir, String name) {
+  private static File findDynamicLibrary(String name) {
+    var dir = OtherJvmUtils.findModules();
     var ext =
         switch (org.enso.common.Platform.getOperatingSystem()) {
           case LINUX -> ".so";
